# geoIM3D

./: AGENTS.md  CITATION.cff  Dockerfile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  claude.yml  msix-store.yml  pages.yml  publish-container.yml  release.yml
apps/geolibre-desktop/: AGENTS.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/geolibre-desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/geolibre-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/geolibre-desktop/src-tauri/capabilities/: default.json
apps/geolibre-desktop/src-tauri/icons/: icon.icns
apps/geolibre-desktop/src-tauri/src/: credential_store.rs  earthwork_file.rs  lib.rs  project_file.rs  resource_session.rs  scene_preset_file.rs  scene_preset_remote.rs  terrain_safety_file.rs  viewshed_file.rs  vworld.rs
apps/geolibre-desktop/src/config/: brand.ts  product-profile.ts
apps/geolibre-desktop/src/hooks/: useCollaboration.ts  useCredentials.ts  useDesktopSettings.ts  useEmbedBridge.ts  useLanguage.ts  useNotebookBridge.ts  usePlugins.ts  useProjectFileActions.ts  useProjectUrlLoader.ts  useRecentProjectsPersistence.ts  useRuntimeEnvironmentVariables.ts  useStartupUpdateCheck.ts  useThemeMode.ts  useThemeScheme.ts
apps/geolibre-desktop/src/i18n/: index.ts  languages.ts
apps/geolibre-desktop/src/lib/: attribute-stats.ts  basemap-presets.ts  browser-tree.ts  cad-coordinate-alignment.ts  cad-dxf-sidecar.ts  cereus-loader.cdn.ts  collab-client.ts  credentials.ts  delimited-text.ts  desktop-project-egress.ts  desktop-project-ingress.ts  diagnostics.ts  duckdb-geometry.ts  duckdb-processing.ts  duckdb-vector-loader.ts  earthwork-analysis.ts  (+82 more)
backend/geolibre_server/: AGENTS.md  pyproject.toml
backend/geolibre_server/geolibre_server/app/: conversion.py  main.py  raster.py  vector.py
backend/geolibre_server/tests/: test_conversion.py  test_raster.py  test_security.py  test_vector.py
docker/: nginx.conf
docs/: android.md  architecture.md  collaboration.md  contributing.md  downloads.md  getting-started.md  i18n.md  index.md  plugin-api.md  privacy.md  project-format.md  python.md  roadmap.md  terms.md  ui-profiles.md
docs/directives/: 00_PRODUCT_VISION.md  01_REBRANDING_SCOPE.md  02_ARCHITECTURE_BOUNDARIES.md  03_UI_BRAND_SYSTEM.md  04_FEATURE_PROFILE.md  05_VWORLD_INTEGRATION.md  06_PLATFORM_PACKAGING.md  07_SECURITY_PRIVACY.md  08_TESTING_RELEASE.md  09_GIT_AGENT_WORKFLOW.md  10_IMPLEMENTATION_PLAN.md
docs/rebranding/: 00_PHASE0_CLOSURE.md  01_BRAND_INVENTORY.md  02_DEFAULT_UX.md  03_PROJECT_IDENTITY.md  04_CREDENTIAL_ARCHITECTURE.md  05_VWORLD_ACCEPTANCE.md  07A_CAD_GIS_COORDINATE_ALIGNMENT.md  07B_BIM_IFC_IMPORT.md  07C_EARTHWORK_CUT_FILL.md  07D1_TERRAIN_SLOPE_SAFETY.md  07D2_VIEWSHED_ANALYSIS.md  08_3D_SCENE_PROJECT_PRESET.md  PRIVATE_REPOSITORY_SNAPSHOT.md
docs/rebranding/evidence/: phase7e-evidence-manifest.json  phase7e-memory-evidence.md  phase7e-runtime-evidence.md  phase8-release-gate-evidence.md
docs/tutorials/: first-map.md  index.md  sharing-embedding.md
docs/user-guide/: adding-data.md  ai-assistant.md  attribute-table.md  data-integrations.md  embedding.md  interface.md  layers.md  map-controls.md  plugins.md  processing.md  projects.md  settings.md  sql-workspace.md  storymaps.md  styling.md
e2e/: brand.spec.ts  cad-alignment-web.spec.ts  earthwork-web.spec.ts  ifc-import-web.spec.ts  layer-groups.spec.ts  product-profile.spec.ts  pwa.spec.ts  storymap.spec.ts  vworld-web-exclusion.spec.ts
packaging/aur/: PKGBUILD  README.md
packaging/copr/: README.md
packaging/msix/: README.md  build-msix.ps1
packaging/portable/: README.md  build-portable.ps1
packaging/winget/: README.md
python/: README.md
python/src/geolibre/: __init__.py  geolibre.py
python/tests/: test_scripting.py
scripts/: check-geoim3d-brand.mjs  gen-whitebox-menu-catalog.mjs  phase7e-memory-sampler.ps1  phase7e-runtime-evidence.ps1  phase7e-submit-native-picker.ps1  render-linux-metainfo.sh  tauri-build.mjs
tests/: add-data-helpers.test.ts  assistant-provider-fields.test.ts  assistant-provider-persistence.test.ts  assistant-provider.test.ts  attribute-stats.test.ts  brand-surface-check.test.ts  brand.test.ts  browser-tree.test.ts  cad-alignment.test.ts  canvas-video.test.ts  cesium-layer-sync.test.ts  collab-protocol.test.ts  credential-architecture.test.ts  data-parsing.test.ts  diagnostics.test.ts  earthwork-analysis.test.ts  elevation-3d.test.ts  elevation-profile.test.ts  file-names.test.ts  geo-editor-geometry.test.ts  graticule.test.ts  html-export.test.ts  i18n-languages.test.ts  ifc-import.test.ts  layer-bounds.test.ts  map-controller.test.ts  map-instance-registry.test.ts  map-reduced-motion.test.ts  metainfo-generated.test.ts  offline-regions.test.ts  offline-tiles.test.ts  ogc-vector-tiles.test.ts  onboarding-suppression.test.ts  packaging-contract.test.ts  phase7e-evidence-harness.test.ts  plugin-manager.test.ts  plugin-trust.test.ts  plugin-ui-surfaces.test.ts  print-layout.test.ts  product-profile.test.ts  (+41 more)
tests/fixtures/: generate-phase7e-runtime-glb.ts  generate-scene-preset-memory-fixtures.mjs
workers/collab/: package.json  wrangler.toml
workers/collab/src/: index.ts  project-snapshot.ts  protocol.ts  session.ts
workers/tiles/: package.json  wrangler.toml
workers/tiles/src/: index.ts
workers/viewer/: package.json  wrangler.toml
workers/viewer/src/: index.ts
(+128 files in other folders)
