[project]
name = "geolibre-server"
version = "0.9.0"
description = "Optional Python processing sidecar for GeoLibre Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
whitebox = [
  "whitebox-workflows>=2.0.2",
]
conversion = [
  "duckdb>=1.1.0",
  "rio-cogeo>=5.0.0",
  "freestiler>=0.1.0",
]
# Optional GeoPandas engine for the Vector processing tools. Not installed by
# default to keep the bundled sidecar small; the desktop app falls back to the
# client-side (Turf.js) engine when this is absent.
vector = [
  "geopandas>=1.0",
  "shapely>=2.0",
]
# Future geospatial stack (not required for MVP UI):
# geo = [
#   "gdal",
#   "geopandas",
#   "rasterio",
#   "whitebox",
#   "leafmap",
#   "duckdb",
# ]

[project.scripts]
geolibre-server = "geolibre_server.app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geolibre_server"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
